--- a/ishop2/IShop.css
+++ b/ishop2/IShop.css
@@ -14,6 +14,10 @@ body {
 	border: 1px solid #D3D3D3;
 }
 
+.ItemSelected {
+	background-color: #ffea7110;
+}
+
 thead {
 	font-size: 19px;
 }
@@ -33,3 +37,7 @@ img {
 	width: 50%;
 }
 
+.ItemDeleteButton {
+background-color: #696969;
+color: white;
+}
